# InstructionalAWE

./: .gitignore  README.md  pyproject.toml
instructional_awe/awe_metric/: coreference.py  descriptives.py  latent_semantic_analysis.py  metric.py  readability.py  word_information.py
instructional_awe/awe_semantic_spaces/: corpus_VU.py  semantic_space.py
instructional_awe/awe_text_representation/: autocorrected.py  text.py
tests/: test_instructional_awe.py
