[tool.poetry]
name = "InstructionalAWE"
version = "0.1.0"
description = "Project for Automated Writing Evaluation in Educational Settings (primary for german languages)."
authors = ["Fabian Grünig <gruenig@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.8"
HanTa = "^0.2.0"
nltk = "^3.6.5"
regex = "^2021.11.10"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
